Fixed jump to step logic, fixed form for water bath

--- a/css/style.css
+++ b/css/style.css
@@ -387,7 +387,6 @@ body {
 .loadDye {
   width: 5%;
   height: 15%;
-  background-image: url(../resources/img/equipment/csTube.svg);
   transform-origin: 100% 0%;
 }
 
@@ -579,20 +578,20 @@ body {
   top: 32%;
   position: absolute;
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
   background-image: url(../resources/img/UI/check.svg);
   outline-width: 0;
 }
 .timerInput {
   display: none;
   -webkit-appearance: none;
-  width: 45%;
-  height: 10%;
+  width: 12%;
+  height: 8%;
   margin: 0;
   padding: 0;
   border: .1rem;
-  left: 45%;
-  top: 32%;
+  left: 10%;
+  top: 82%;
   position: absolute;
   background-repeat: no-repeat;
   font-size: .25rem;
@@ -602,13 +601,13 @@ body {
 
 .timerButton {
   display: none;
-  width: 64%;
-  height: 10%;
-  left: 100%;
-  top: 32%;
+  width: 13%;
+  height: 8%;
+  left: 24%;
+  top: 82%;
   position: absolute;
   background-repeat: no-repeat;
-  background-size: contain;
   background-image: url(../resources/img/UI/check.svg);
+  background-size: cover;
   outline-width: 0;
 }
